testsuite/tests/parser/should_fail/Or1.hs
module Main where

main = print $ h 1

h one = case one of
  (one of 2, 3) -> True