testsuite/tests/parser/should_fail/Or1.stderr

Or1.hs:6:4: error: [GHC-29847]
    Illegal or-pattern: one of 2, 3
    Suggested fix: Perhaps you intended to use OrPatterns
